apps/node-red/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: node-red-ingress-ext
  namespace: node-red
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`node-red.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: node-red
          port: main
