apps/node-red/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: node-red-ingress
  namespace: node-red
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`node-red.sobrinho.pt`)
      kind: Rule
      services:
        - name: node-red
          port: main
